add and use domain URL global for use in views

--- a/resources/views/partials/master-clean.njk
+++ b/resources/views/partials/master-clean.njk
@@ -18,7 +18,7 @@
   <script>
     window.app = {}
     window.app.env = '{{ env() }}';
-    window.app.host = '{{ host() }}';
+    window.app.host = '{{ domain() }}';
 
   </script>
   <script src="/dist/js/app.min.js"></script>
