--- a/resources/views/partials/master.njk
+++ b/resources/views/partials/master.njk
@@ -24,7 +24,7 @@
   <script>
     window.app = {}
     window.app.env = '{{ env() }}';
-    window.app.host = '{{ host() }}';
+    window.app.host = '{{ domain() }}';
     window.app.gmapsKey = '{{ gmaps() }}'
   </script>
   <script src="/dist/js/app.min.js"></script>
