--- a/resources/views/partials/about.njk
+++ b/resources/views/partials/about.njk
@@ -5,27 +5,37 @@
   <div class="hero-body">
     <div class="container">
       <div class="columns">
-        <div class="column is-8-desktop is-offset-2-desktop">
+        <div class="column is-10-desktop is-offset-1-desktop">
           <div class=" has-text-centered"><img src="/assets/logo.png"  class="logo" alt="FETS logo"></div>
           <div class="card is-login mt">
             <div class="card-content">
               <div class="content">
-                <h1 class="has-text-centered">ΠΛΗΡΟΦΟΡΙΕΣ</h1>
-                <h2 class="has-text-centered"><span class="red-brown">🔥</span> <span class="gray">ΟΛΟΙ MAZI</span> ενεργά στη πρόληψη κατά των πυρκαγιών <span class="red-brown">🔥</span></h2>
-                <h3>Τι είναι το FETS;</h3>
+                <h1 class="has-text-centered"><span class="red-brown">🔥</span> <span class="gray">ΟΛΟΙ MAZI</span> ενεργά στη πρόληψη κατά των πυρκαγιών <span class="red-brown">🔥</span></h1>
                 <p class="info-text">To FETS (Tactical Emergency Fire System), είναι μία διαδικτυακή εφαρμογή, συνοδευόμενη με μία εφαρμογή για κινητά smartphones,
                 η οποία με το πάτημα ενός και μόνο κουμπιού αναφέρει στις αρμόδιες υπηρεσίες πιθανές εστίες φωτιάς.
                  </p>
                  <h3>Πως μπορώ να βοηθήσω και εγώ;</h3>
-                 <p class="info-text">Η βοήθεια σας είναι σημαντική! <br>
+                 <p class="info-text">
                  Κάνοντας εγκατάσταση την εφαρμογή στο κινητό σας, σε περίπτωση που παρατηρήσετε φωτιά,
                  μπορείτε άμεσα να ειδοποιήσετε τις αρμόδιες υπηρεσίες για το συμβάν. Πατώντας το μοναδικό κουμπί της εφαρμογής, η εφαρμογή,
-                 μεταδίδει την ακριβή τοποθεσία σας (συντεταγμένες) και τον αριθμό του κινητού σας.</p>
-                <p class="info-text">Με αυτό τον τρόπο, οι αρμόδιες υπηρεσίες, θα μπορούν να γνωρίζουν με ακρίβεια τη τοποθεσία
+                 μεταδίδει την ακριβή τοποθεσία σας (συντεταγμένες) και τον αριθμό του κινητού σας.
+                 Με αυτό τον τρόπο, οι αρμόδιες υπηρεσίες, θα μπορούν να γνωρίζουν με ακρίβεια τη τοποθεσία
                 του συμβάντος και να εξακριβώσουν τη βαρύτητα της κατάστασης.
                  </p>
+
                  <h3 class="has-text-centered"><span class="gray">ΒΑΛΤΕ ΤΕΛΟΣ ΣΤΗ ΚΑΤΑΣΤΡΟΦΗ ΤΗΣ ΧΩΡΑΣ</span></h3>
-                 <button class="button is-large is-info">ΕΓΚΑΤΑΣΤΑΣΗ ΕΦΑΡΜΟΓΗΣ ANDROID</button>
+                 <div class="has-text-centered"><button class="button red-brown">ΕΓΚΑΤΑΣΤΑΣΗ ΕΦΑΡΜΟΓΗΣ ANDROID</button></div>
+                 <h3 class="has-text-centered"><span class="gray">Πολιτική Απορρήτου - Συλλογή Πληροφοριών</span></h3>
+                 <p>Η υπηρεσία FETS το μόνο που συλλέγει από τις αναφορές σας για συμβάντα πυρκαγιάς, είναι τα παρακάτω:</p>
+                 <ul>
+                    <li>Τις συντεταγμένες σας τη στιγμή που αναφέρετε το συμβάν</li>
+                    <li>Τον αριθμό του κινητού σας</li>
+                    <li>Την ώρα αναφοράς του συμβάντος</li>
+                 </ul>
+                 <p>Η εφαρμογή για κινητά, δεν συλλέγει ή αποστέλλει άλλα στοιχεία, πέρα των παραπάνω.
+                 Τα παραπάνω στοιχεία δεν μοιράζονται - διατίθενται σε τρίτους.
+                 Τα στοιχεία αποθηκεύονται προσωρινά, για όση ώρα διαρκεί το συμβάν, κατόπιν διαγράφονται οριστικά από την υπηρεσία.
+                 </p>
               </div>
             </div>
           </div>
